Give Up on Fixing Align

--- a/src/pages/global/backkey.css
+++ b/src/pages/global/backkey.css
@@ -10,6 +10,5 @@
 .BackKey .menu-btn{
     color: #FFFFFF;
     font-size: 20px;
-    line-height: 35px;
     margin: 0;
 }
