--- a/src/pages/global/navbar.css
+++ b/src/pages/global/navbar.css
@@ -58,7 +58,6 @@
 .Navbar .menu-btn{
     color: #FFFFFF;
     font-size: 20px;
-    line-height: 35px;
     margin: 0;
 }
 .Navbar .login-btn {
