--- a/src/pages/others/all.css
+++ b/src/pages/others/all.css
@@ -34,7 +34,6 @@
     padding: 10px;
     color: #FFFFFF;
     font-size: 20px;
-    line-height: 35px;
 }
 
 /* SEARCH */
